fix: correct spacing around social icons

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ p {
   }
 
   #intro-pic {
-    margin: 15px 40px;
+    margin: 15px 40px 40px 40px;
     box-shadow: 2px 2px 10px gray;
   }
 
@@ -60,7 +60,7 @@ p {
   .name {
     position: absolute;
     width: 100%;
-    top: 275px;
+    top: 390px;
   }
   h1 {
     margin-left: 15%;
@@ -104,7 +104,9 @@ p {
 
   .social div img {
     height: 30px;
-    padding-left: 20px;
+  }
+  .linkedin {
+    padding: 0 15px;
   }
 
   /* work section */
